k8s/deployment/site_demo/IngressClass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: ingress-nginx
spec:
  controller: nginx.org/ingress-controller
