k8s/deployment/site_demo/deployment-demo-react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-site-deployment
  namespace: mjoulani # namespace if needed to change
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-site
  template:
    metadata:
      labels:
        app: react-site
    spec:
      containers:
        - name: react-site
          image: alexeymihaylovdev/demo:1.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-site-service
  namespace: mjoulani # namespace if needed to change
spec:
  selector:
    app: react-site
  ports:
    - protocol: TCP
      port: 80
  type: NodePort
