k8s/deployment/site_demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-site-service
  namespace: alexey # namespace if needed to change
spec:
  selector:
    app: react-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: NodePort
