k8s/deployment/site_demo/deployment-react-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-site
  template:
    metadata:
      labels:
        app: react-site
    spec:
      containers:
        - name: react-site
          image: alexeymihaylovdev/demo:1.1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-site-service
spec:
  selector:
    app: react-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react-site.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-site-service
                port:
                  number: 80
