k8s/deployment/site_demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: alexey # namespace if needed to change
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aba-babala.co.il
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-site-service
            port:
              number: 80
